--- a/maket_№4-shop-cros copy/css/global.css
+++ b/maket_№4-shop-cros copy/css/global.css
@@ -1,16 +1,18 @@
 :root {
-    /* --color-ac-orange: #FFA55C; */
+    /* --colors-- */
     --color-body: #FFFFFF;
     --color-red: #DE343D;
     --color-bg_product: #F9F9F9;
     --color-text-name: #9C9C9C;
+    --color-text_btn: #808080;
+    --color-text_brand: #040404;
 
-/* privet */
+/* --fonts-- */
     --font-family: "Monument Extended", sans-serif;
     --second-family: "Gabriola", sans-serif;
     --third-family: "Inspiration", sans-serif;
 
-    /* --transition: all .4s; */
+    --transition-norm: all 0.6s ease;
     /* --border-radius: 20px; */
 }
 
@@ -29,13 +31,12 @@ html {
     /* font-size: 16px; дефолтное значение */
     /* font-weight: 400; Дефолтное значение */
     line-height: 1.5;
-    color: var(--color-text);
+    color: var(color-text_brand);
 
 }
 
 .wrapper {
     min-height: 100%;
-    /* max-width: 1024px; */
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -49,6 +50,7 @@ html {
     /* margin: 0 auto; */
     line-height: 24px;
     /* height: 100%; */
+    position: static;
 }
 
 .title {
