--- a/maket_№4-shop-cros/css/style.css
+++ b/maket_№4-shop-cros/css/style.css
@@ -17,7 +17,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
-} */ 
+} */
 
 .section-header {
     display: flex;
@@ -186,22 +186,22 @@
     line-height: 1.4;
 }
 
-.brand{
+.brand {
     font-size: 22px;
     color: var(--color-text-name);
     letter-spacing: 1.57px;
 }
 
-.product-name{
+.product-name {
     font-size: 25px;
     color: var(--color-text_brand);
 }
 
-.price{
+.price {
     font-size: 20px;
 }
 
-.sizes{
+.sizes {
     font-size: 18px;
     letter-spacing: 1.57px;
     color: var(--color-red);
@@ -228,4 +228,140 @@
 .see-all-btn:hover {
     transform: scale(1.1);
     border-radius: 15px;
+}
+
+/* ======= Section slogan=========== */
+
+.slogan-box {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin: 116px 245px 0 224px;
+}
+
+.section-slogan-text {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    align-items: center;
+    
+}
+
+.span-slogan {
+    font-family: var(--font-family);
+    font-size: 105px;
+    text-transform: capitalize;
+}
+
+.border-1 {
+    border-radius: 42px;
+    width: 197px;
+    height: 89px;
+    background-color: black;
+    position: relative;
+}
+
+.border-1::after {
+    content: url(../img/decor/decor_sneakers-1.png);
+    position: absolute;
+    top: -165px;
+    right: -105px;
+}
+
+.border-2 {
+    border-radius: 42px;
+    width: 250px;
+    height: 89px;
+    background-color: #ffb800;
+    position: relative;
+}
+.border-2::after {
+    content: url(../img/decor/decor_sneakers-2.png);
+    position: absolute;
+    top: -194px;
+    right: -149px;
+}
+
+.border-3 {
+    border-radius: 42px;
+    width: 178px;
+    height: 89px;
+    background-color: black;
+    position: relative;
+}
+.border-3::after {
+    content: url(../img/decor/decor_sneakers-3.png);
+    position: absolute;
+    top: -55px;
+    right: -83px;
+}
+.slogan-labeles{
+    display: flex;
+    justify-content: center;
+    /* align-items: end; */
+    align-items: center;
+    gap: 50px;
+    margin-top: 92px;
+}
+.nike-lable{
+    max-height: 60px;
+}
+
+
+/* ======= promo section=========== */
+.promo-section{
+/*    display: flex;
+    max-width: 100%;
+    height: 940px; */
+}
+.promo-section_runline {
+    margin-top: 177px;
+    max-height: 67px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    overflow: hidden;
+    padding: 10px 0 12px 0;
+    
+}
+
+.runline1{
+    animation: runlines1 10s infinite linear;
+    animation-delay: -10s;
+}
+.runline2{
+    animation: runlines2 10s infinite linear;
+    animation-delay: -s;
+}
+
+.runline > span {
+text-transform: uppercase ;
+font-size: 37px;
+}
+.runline > img {
+    width: 5%;
+    max-height: 100%;
+    height: 2%;
+}
+
+@keyframes runlines1 {
+        0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes runlines2 {
+        0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-200%);
+    }
+}
+
+.promo-section_photo{
+    max-width: 100%;
 }
